Correction des erreurs de compilation et amélioration des tests