@@ -13,6 +13,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 
 import java.util.Arrays;
 import java.util.List;
@@ -35,6 +36,7 @@ class ClientServiceTest {
 
     @BeforeEach
     void setUp() {
+        MockitoAnnotations.openMocks(this);
         clientService = new ClientService(clientDAO, adresseDAO);
     }
 
@@ -42,44 +44,42 @@ class ClientServiceTest {
     @DisplayName("Tests de findById")
     class FindByIdTests {
         @Test
-        @DisplayName("Devrait retourner un client quand l'ID existe")
+        @DisplayName("Devrait retourner le client quand l'ID existe")
         void shouldReturnClientWhenIdExists() throws ValidationException, DatabaseException {
             // Arrange
             Long id = 1L;
-            Client expectedClient = new Client();
-            expectedClient.setIdentifiant(id);
-            when(clientDAO.findById(id)).thenReturn(Optional.of(expectedClient));
+            Client client = new Client("Test Client", new Adresse("123", "Rue Test", "75000", "Paris"), "0123456789", "test@test.com", "Commentaire", 100000.0, 10);
+            when(clientDAO.findById(id)).thenReturn(Optional.of(client));
 
             // Act
             Optional<Client> result = clientService.findById(id);
 
             // Assert
             assertTrue(result.isPresent());
-            assertEquals(expectedClient, result.get());
+            assertEquals(client, result.get());
             verify(clientDAO).findById(id);
         }
 
         @Test
-        @DisplayName("Devrait retourner empty quand l'ID n'existe pas")
+        @DisplayName("Devrait retourner vide quand l'ID n'existe pas")
         void shouldReturnEmptyWhenIdDoesNotExist() throws ValidationException, DatabaseException {
             // Arrange
-            Long id = 1L;
+            Long id = 999L;
             when(clientDAO.findById(id)).thenReturn(Optional.empty());
 
             // Act
             Optional<Client> result = clientService.findById(id);
 
             // Assert
-            assertTrue(result.isEmpty());
+            assertFalse(result.isPresent());
             verify(clientDAO).findById(id);
         }
 
         @Test
-        @DisplayName("Devrait lever une ValidationException quand l'ID est null")
-        void shouldThrowValidationExceptionWhenIdIsNull() {
+        @DisplayName("Devrait lever une exception quand l'ID est null")
+        void shouldThrowExceptionWhenIdIsNull() {
             // Act & Assert
             assertThrows(ValidationException.class, () -> clientService.findById(null));
-            verify(clientDAO, never()).findById(any());
         }
     }
 
@@ -87,34 +87,21 @@ class ClientServiceTest {
     @DisplayName("Tests de findAll")
     class FindAllTests {
         @Test
-        @DisplayName("Devrait retourner la liste de tous les clients")
+        @DisplayName("Devrait retourner tous les clients")
         void shouldReturnAllClients() throws DatabaseException {
             // Arrange
-            List<Client> expectedClients = Arrays.asList(
-                new Client(), new Client(), new Client()
+            List<Client> clients = Arrays.asList(
+                new Client("Client 1", new Adresse("1", "Rue 1", "75001", "Paris"), "0123456789", "client1@test.com", "Commentaire 1", 100000.0, 10),
+                new Client("Client 2", new Adresse("2", "Rue 2", "75002", "Paris"), "0123456789", "client2@test.com", "Commentaire 2", 200000.0, 20)
             );
-            when(clientDAO.findAll()).thenReturn(expectedClients);
+            when(clientDAO.findAll()).thenReturn(clients);
 
             // Act
             List<Client> result = clientService.findAll();
 
             // Assert
-            assertEquals(expectedClients.size(), result.size());
-            assertEquals(expectedClients, result);
-            verify(clientDAO).findAll();
-        }
-
-        @Test
-        @DisplayName("Devrait retourner une liste vide quand il n'y a pas de clients")
-        void shouldReturnEmptyListWhenNoClients() throws DatabaseException {
-            // Arrange
-            when(clientDAO.findAll()).thenReturn(List.of());
-
-            // Act
-            List<Client> result = clientService.findAll();
-
-            // Assert
-            assertTrue(result.isEmpty());
+            assertEquals(2, result.size());
+            assertEquals(clients, result);
             verify(clientDAO).findAll();
         }
     }
@@ -126,28 +113,26 @@ class ClientServiceTest {
         @DisplayName("Devrait créer un client avec succès")
         void shouldCreateClientSuccessfully() throws ValidationException, DatabaseException {
             // Arrange
-            Client client = new Client();
-            Adresse adresse = new Adresse();
-            client.setAdresse(adresse);
+            Adresse adresse = new Adresse("123", "Rue Test", "75000", "Paris");
+            Client client = new Client("Test Client", adresse, "0123456789", "test@test.com", "Commentaire", 100000.0, 10);
             when(clientDAO.save(any(Client.class))).thenReturn(client);
             when(adresseDAO.save(any(Adresse.class))).thenReturn(adresse);
-
+            
             // Act
             Client result = clientService.create(client);
-
+            
             // Assert
             assertNotNull(result);
+            assertEquals(client, result);
             verify(adresseDAO).save(adresse);
             verify(clientDAO).save(client);
         }
 
         @Test
-        @DisplayName("Devrait lever une ValidationException quand le client est null")
-        void shouldThrowValidationExceptionWhenClientIsNull() {
+        @DisplayName("Devrait lever une exception quand le client est null")
+        void shouldThrowExceptionWhenClientIsNull() {
             // Act & Assert
             assertThrows(ValidationException.class, () -> clientService.create(null));
-            verify(clientDAO, never()).save(any());
-            verify(adresseDAO, never()).save(any());
         }
     }
 
@@ -158,10 +143,9 @@ class ClientServiceTest {
         @DisplayName("Devrait mettre à jour un client avec succès")
         void shouldUpdateClientSuccessfully() throws ValidationException, ResourceNotFoundException, DatabaseException {
             // Arrange
-            Client client = new Client();
+            Adresse adresse = new Adresse("123", "Rue Test", "75000", "Paris");
+            Client client = new Client("Test Client", adresse, "0123456789", "test@test.com", "Commentaire", 100000.0, 10);
             client.setIdentifiant(1L);
-            Adresse adresse = new Adresse();
-            client.setAdresse(adresse);
             when(clientDAO.findById(1L)).thenReturn(Optional.of(client));
             when(clientDAO.update(any(Client.class))).thenReturn(client);
             when(adresseDAO.update(any(Adresse.class))).thenReturn(adresse);
@@ -171,30 +155,22 @@ class ClientServiceTest {
 
             // Assert
             assertNotNull(result);
+            assertEquals(client, result);
             verify(clientDAO).findById(1L);
-            verify(clientDAO).update(client);
             verify(adresseDAO).update(adresse);
+            verify(clientDAO).update(client);
         }
 
         @Test
-        @DisplayName("Devrait lever une ValidationException quand le client est null")
-        void shouldThrowValidationExceptionWhenClientIsNull() {
-            // Act & Assert
-            assertThrows(ValidationException.class, () -> clientService.update(null));
-            verify(clientDAO, never()).update(any());
-        }
-
-        @Test
-        @DisplayName("Devrait lever une ResourceNotFoundException quand le client n'existe pas")
-        void shouldThrowResourceNotFoundExceptionWhenClientDoesNotExist() {
+        @DisplayName("Devrait lever une exception quand le client n'existe pas")
+        void shouldThrowExceptionWhenClientDoesNotExist() {
             // Arrange
-            Client client = new Client();
-            client.setIdentifiant(1L);
-            when(clientDAO.findById(1L)).thenReturn(Optional.empty());
+            Client client = new Client("Test Client", new Adresse("123", "Rue Test", "75000", "Paris"), "0123456789", "test@test.com", "Commentaire", 100000.0, 10);
+            client.setIdentifiant(999L);
+            when(clientDAO.findById(999L)).thenReturn(Optional.empty());
 
             // Act & Assert
             assertThrows(ResourceNotFoundException.class, () -> clientService.update(client));
-            verify(clientDAO, never()).update(any());
         }
     }
 
@@ -206,7 +182,7 @@ class ClientServiceTest {
         void shouldDeleteClientSuccessfully() throws ValidationException, ResourceNotFoundException, DatabaseException {
             // Arrange
             Long id = 1L;
-            Client client = new Client();
+            Client client = new Client("Test Client", new Adresse("123", "Rue Test", "75000", "Paris"), "0123456789", "test@test.com", "Commentaire", 100000.0, 10);
             client.setIdentifiant(id);
             when(clientDAO.findById(id)).thenReturn(Optional.of(client));
 
@@ -219,23 +195,14 @@ class ClientServiceTest {
         }
 
         @Test
-        @DisplayName("Devrait lever une ValidationException quand l'ID est null")
-        void shouldThrowValidationExceptionWhenIdIsNull() {
-            // Act & Assert
-            assertThrows(ValidationException.class, () -> clientService.delete(null));
-            verify(clientDAO, never()).delete(any());
-        }
-
-        @Test
-        @DisplayName("Devrait lever une ResourceNotFoundException quand le client n'existe pas")
-        void shouldThrowResourceNotFoundExceptionWhenClientDoesNotExist() {
+        @DisplayName("Devrait lever une exception quand le client n'existe pas")
+        void shouldThrowExceptionWhenClientDoesNotExist() {
             // Arrange
-            Long id = 1L;
+            Long id = 999L;
             when(clientDAO.findById(id)).thenReturn(Optional.empty());
 
             // Act & Assert
             assertThrows(ResourceNotFoundException.class, () -> clientService.delete(id));
-            verify(clientDAO, never()).delete(any());
         }
     }
 
@@ -246,26 +213,24 @@ class ClientServiceTest {
         @DisplayName("Devrait trouver un client par email")
         void shouldFindClientByEmail() throws ValidationException, DatabaseException {
             // Arrange
-            String email = "test@example.com";
-            Client client = new Client();
-            client.setEmail(email);
-            when(clientDAO.findAll()).thenReturn(List.of(client));
+            String email = "test@test.com";
+            Client client = new Client("Test Client", new Adresse("123", "Rue Test", "75000", "Paris"), "0123456789", email, "Commentaire", 100000.0, 10);
+            when(clientDAO.findAll()).thenReturn(Arrays.asList(client));
 
             // Act
             Optional<Client> result = clientService.findByEmail(email);
 
             // Assert
             assertTrue(result.isPresent());
-            assertEquals(email, result.get().getEmail());
+            assertEquals(client, result.get());
             verify(clientDAO).findAll();
         }
 
         @Test
-        @DisplayName("Devrait lever une ValidationException quand l'email est null")
-        void shouldThrowValidationExceptionWhenEmailIsNull() {
+        @DisplayName("Devrait lever une exception quand l'email est vide")
+        void shouldThrowExceptionWhenEmailIsEmpty() {
             // Act & Assert
-            assertThrows(ValidationException.class, () -> clientService.findByEmail(null));
-            verify(clientDAO, never()).findAll();
+            assertThrows(ValidationException.class, () -> clientService.findByEmail(""));
         }
     }
 
@@ -276,19 +241,19 @@ class ClientServiceTest {
         @DisplayName("Devrait trouver des clients par raison sociale")
         void shouldFindClientsByRaisonSociale() throws DatabaseException {
             // Arrange
-            String raisonSociale = "Test Company";
-            Client client1 = new Client();
-            client1.setRaisonSociale(raisonSociale);
-            Client client2 = new Client();
-            client2.setRaisonSociale(raisonSociale);
-            when(clientDAO.findAll()).thenReturn(Arrays.asList(client1, client2));
+            String raisonSociale = "Test Client";
+            List<Client> clients = Arrays.asList(
+                new Client(raisonSociale, new Adresse("1", "Rue 1", "75001", "Paris"), "0123456789", "client1@test.com", "Commentaire 1", 100000.0, 10),
+                new Client(raisonSociale, new Adresse("2", "Rue 2", "75002", "Paris"), "0123456789", "client2@test.com", "Commentaire 2", 200000.0, 20)
+            );
+            when(clientDAO.findAll()).thenReturn(clients);
 
             // Act
             List<Client> result = clientService.findByRaisonSociale(raisonSociale);
 
             // Assert
             assertEquals(2, result.size());
-            assertTrue(result.stream().allMatch(c -> raisonSociale.equals(c.getRaisonSociale())));
+            assertEquals(clients, result);
             verify(clientDAO).findAll();
         }
     }
@@ -300,10 +265,11 @@ class ClientServiceTest {
         @DisplayName("Devrait retourner true quand la raison sociale existe")
         void shouldReturnTrueWhenRaisonSocialeExists() throws DatabaseException {
             // Arrange
-            String raisonSociale = "Test Company";
-            Client client = new Client();
-            client.setRaisonSociale(raisonSociale);
-            when(clientDAO.findAll()).thenReturn(List.of(client));
+            String raisonSociale = "Test Client";
+            List<Client> clients = Arrays.asList(
+                new Client(raisonSociale, new Adresse("1", "Rue 1", "75001", "Paris"), "0123456789", "client1@test.com", "Commentaire 1", 100000.0, 10)
+            );
+            when(clientDAO.findAll()).thenReturn(clients);
 
             // Act
             boolean result = clientService.existsByRaisonSociale(raisonSociale);
@@ -317,8 +283,11 @@ class ClientServiceTest {
         @DisplayName("Devrait retourner false quand la raison sociale n'existe pas")
         void shouldReturnFalseWhenRaisonSocialeDoesNotExist() throws DatabaseException {
             // Arrange
-            String raisonSociale = "Test Company";
-            when(clientDAO.findAll()).thenReturn(List.of());
+            String raisonSociale = "Test Client";
+            List<Client> clients = Arrays.asList(
+                new Client("Autre Client", new Adresse("1", "Rue 1", "75001", "Paris"), "0123456789", "client1@test.com", "Commentaire 1", 100000.0, 10)
+            );
+            when(clientDAO.findAll()).thenReturn(clients);
 
             // Act
             boolean result = clientService.existsByRaisonSociale(raisonSociale);
